# Security-no-ARE-words

./: .gitignore  LICENSE  Makefile  README.html  README.md  auto-update.sh  generate_podcast_list.py  install_uv.ps1  install_venv.ps1  install_venv.sh  make.bat  pyproject.toml  requirements.txt  sphinxcontrib_roles.py
.github/workflows/: daily_update.yml
docs/: .buildinfo  CNAME  about.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/.doctrees/: about.doctree  environment.pickle  genindex.doctree  index.doctree
docs/_sources/: about.rst.txt  index.rst.txt
docs/_static/: documentation_options.js  roles.css  セキュリティのアレ_放送回リスト.csv  セキュリティのアレ_放送回リスト_自動更新.csv
docs/doctrees/: about.doctree  environment.pickle  genindex.doctree  index.doctree
docs/html/: .buildinfo  CNAME  about.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/podcasts/: history.html  index.html  podcast_list.html
docs/words/: BOD.html  CISA.html  CISSP.html  KEV.html  LINEスタンプ.html  NOTICE.html  NTP.html  ResidentialProxy.html  SBOM.html  SeizureBanner.html  Seizurebanner.html  VS根岸とVSかんご.html  index.html  ○○と○○以外からお願いします.html  ◯◯と〇〇以外からお願いします.html  「侵入前提」前提.html  おすすめのアレ.html  お便りのコーナー.html  アイキャッチ.html  アレステッカー.html  アレリスナー.html  アレ勢.html  サイバーセキュリティに関する総務大臣奨励賞.html  (+11 more)
scraping/: README.md  scraping.py  scraping2.py  scraping_2025-06-07.json  scraping_2025-06-07_excel.csv  scraping_2025-06-07_simple.csv  セキュリティのアレ_放送回リスト.csv  セキュリティのアレ_放送回リスト.xlsx
source/: about.rst  conf.py  index.rst  robots.txt
(+173 files in other folders)
